Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113321

Material TextArea and TextField placeholder text incorrectly clipped

XMLWordPrintable

    • 5da4d5e80 (dev), 8b1ad3c03 (6.5)

      See the GIF in https://bugreports.qt.io/browse/QTBUG-112650?focusedCommentId=717021&page=com.atlassian.jira.plugin.system.issuetabpanels:comment-tabpanel#comment-717021.

      import QtQuick
      import QtQuick.Controls
      import QtQuick.Layouts
      
      ApplicationWindow {
          width: 640
          height: 480
          visible: true
      
          RowLayout {
              anchors.fill: parent
      
              TextArea {
                  placeholderText: "Type something..."
                  text: "a\nb\nc\nd\ne\nf\ng\nh\ni\nj\nk\nl\nm\nn"
                  clip: true
      
                  Layout.preferredWidth: 200
                  Layout.preferredHeight: 200
              }
      
              ScrollView {
                  Layout.preferredWidth: 200
                  Layout.preferredHeight: 200
      
                  TextArea {
                     placeholderText: "Type something..."
                     text: "a\nb\nc\nd\ne\nf\ng\nh\ni\nj\nk\nl\nm\nn"
                  }
              }
      
              TextField {
                  placeholderText: "Type something..."
                  text: "abc"
                  clip: true
              }
          }
      }
      

        1. after-473347.png
          35 kB
          Mitch Curtis
        2. before-473347.png
          31 kB
          Mitch Curtis
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            mitch_curtis Mitch Curtis
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes